<resources>
    <string name="app_name">Weather App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="humidity">HUMIDITY</string>
    <string name="wind">WIND</string>
    <string name="pressure">PRESSURE</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="search">Search</string>
    <string name="search_city">Search City</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="clear_all">Clear All</string>
    <string name="suggested_cities">SUGGESTED CITIES</string>
</resources>