<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:src="@drawable/cloudy_day_1"
        app:layout_constraintBottom_toTopOf="@+id/top_guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9sp"
        android:text="@string/weather"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/location_textview"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tlemcen , Algeria"
        android:layout_marginBottom="10sp"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_normal"
        app:layout_constraintBottom_toTopOf="@+id/top_guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineV2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/weather_card_bg"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/weatherStateImageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/cloudy_night_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weatherDegreeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24°"
            android:gravity="center"
            android:textSize="@dimen/text_degree"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherStateImageView" />
        <TextView
            android:layout_margin="8sp"
            android:id="@+id/weatherStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partly_cloudy"
            android:gravity="center"
            android:textSize="@dimen/text_large"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherDegreeTextView"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherStateTextView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thermostat_ic_max"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineV3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/highestDegreeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="H: 28°"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thermostat_ic_low"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineV3" />
        <TextView
            android:id="@+id/lowestDegreeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="L: 18°"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16sp"
        android:background="@drawable/weather_card_bg"
        app:layout_constraintBottom_toTopOf="@+id/guidelineV4"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineV2" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/humidityPercentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="65%"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font_bold"
            android:textColor="@color/text_secondary"
            android:text="@string/humidity"
            android:textSize="@dimen/text_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidityPercentTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/weather_card_bg"
        android:layout_margin="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineV4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guidelineV2" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/wind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12 km/h"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font_bold"
            android:textColor="@color/text_secondary"
            android:text="@string/wind"
            android:textSize="@dimen/text_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/windTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16sp"
        android:background="@drawable/weather_card_bg"
        app:layout_constraintBottom_toTopOf="@+id/guidelineV4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guidelineV2" >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/pressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1012 hPa"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font_bold"
            android:textColor="@color/text_secondary"
            android:text="@string/pressure"
            android:textSize="@dimen/text_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:fontFamily="@font/inter_font_regular"
        android:text="@string/hourly_forecast"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineV4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecastRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

</androidx.constraintlayout.widget.ConstraintLayout>